[gd_scene load_steps=17 format=3 uid="uid://brdl2ojabd16f"]

[ext_resource type="Texture2D" uid="uid://f2tidigiacy4" path="res://Assets/Enemy/2 Owlet_Monster/Owlet_Monster_Run_6.png" id="1_cyd7t"]
[ext_resource type="Script" path="res://Scripts/enemy_1.gd" id="1_x54oi"]
[ext_resource type="Texture2D" uid="uid://o4075rbs07er" path="res://Assets/Enemy/2 Owlet_Monster/Owlet_Monster_Attack1_4.png" id="2_fl1lh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kxgej"]
atlas = ExtResource("2_fl1lh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gttut"]
atlas = ExtResource("2_fl1lh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ryoa"]
atlas = ExtResource("2_fl1lh")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7dsv"]
atlas = ExtResource("2_fl1lh")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swk7v"]
atlas = ExtResource("1_cyd7t")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_03117"]
atlas = ExtResource("1_cyd7t")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6urqw"]
atlas = ExtResource("1_cyd7t")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg2lr"]
atlas = ExtResource("1_cyd7t")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h70bl"]
atlas = ExtResource("1_cyd7t")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_723ce"]
atlas = ExtResource("1_cyd7t")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wttd3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxgej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gttut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ryoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7dsv")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swk7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03117")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6urqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg2lr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h70bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_723ce")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8frxi"]
height = 24.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f3tfp"]
radius = 16.0
height = 36.0

[node name="Enemy1" type="CharacterBody2D"]
script = ExtResource("1_x54oi")
damage = 20

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_wttd3")
animation = &"attack"
frame_progress = 0.626767

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_8frxi")

[node name="hit_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_area"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_f3tfp")

[node name="attack_cd" type="Timer" parent="."]
wait_time = 0.6

[connection signal="body_entered" from="hit_area" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="hit_area" to="." method="_on_hit_area_body_exited"]
[connection signal="timeout" from="attack_cd" to="." method="_on_attack_cd_timeout"]
